<resources>
    <string name="app_name">QuizApp</string>
    <string name="quizzapp">QuizzApp</string>
    <string name="welcome">Willkommen!</string>
    <string name="login">Login</string>
    <string name="username">Benutzername</string>
    <string name="passwort">Passwort</string>
    <string name="register">Registrieren</string>
    <string name="email">Email</string>
    <string name="passwort_wiederholen">Passwort wiederholen</string>
    <string name="email_oder_username">Email oder Benutzername</string>
    <string name="register_text">Du hast bereits einen Account?\nRegistriere dich <u>hier</u>.</string>
    <string name="login_text">Du hast noch keinen Account?\nLogin <u>hier</u>.</string>
    <string name="duellkoenig_tabelle">Duellkönig Tabelle</string>
    <string name="spielmodus">Spielmodus</string>
    <string name="schwierigkeitsliste">Schwierigkeitsliste</string>
    <string name="fragenkategorie">Fragenkategorie</string>
    <string name="spiel_starten">Spiel starten</string>
    <string name="schwierikeitsliste">Schwierikeitsliste</string>
    <string name="waehle_einen_schwierigkeitsgrad">Wähle einen Schwierigkeitsgrad</string>
    <string name="schwer">schwer</string>
    <string name="mittel">mittel</string>
    <string name="leicht">leicht</string>
    <string name="waehle_eine_kategorie">Wähle eine Kategorie</string>
    <string name="betriebssysteme">Betriebssysteme</string>
    <string name="datenbanken">Datenbanken</string>
    <string name="php">PHP</string>
    <string name="c">C#</string>
    <string name="allgemeines">Allgemeines</string>
    <string name="weiter">Weiter</string>
    <string name="zurueck">Zurück</string>
    <string name="duellmodus">Duellmodus</string>
    <string name="einzelmodus">Einzelmodus</string>
    <string name="spielmodus_w_hlen">Spielmodus wählen</string>
    <string name="duellkoenig">Duellkönig</string>


</resources>