<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4150A3"
    tools:context=".Kategorie">

    <TextView
        android:id="@+id/ueberschriftKategorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/waehle_eine_kategorie"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BENButton"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:layout_marginTop="83dp"
        android:text="@string/betriebssysteme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ueberschriftKategorie" />

    <Button
        android:id="@+id/DBButton"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/datenbanken"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BENButton" />

    <Button
        android:id="@+id/PHPButton"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/php"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DBButton" />

    <Button
        android:id="@+id/CButton"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:layout_marginTop="38dp"
        android:text="@string/c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PHPButton" />

    <Button
        android:id="@+id/AllgemeinesButton"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/allgemeines"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CButton"
        app:layout_constraintVertical_bias="0.021" />
</androidx.constraintlayout.widget.ConstraintLayout>