<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4150A3"
    tools:context=".startseite">

    <TextView
        android:id="@+id/ueberschrift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="QuizzApp"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/duellkoenigButton"
        android:layout_width="149dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/duellkoenig_tabelle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ueberschrift" />

    <Button
        android:id="@+id/spielmodusButton"
        android:layout_width="149dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/spielmodus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/duellkoenigButton" />

    <Button
        android:id="@+id/schwierigkeitslisteButton"
        android:layout_width="149dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/schwierigkeitsliste"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spielmodusButton" />

    <Button
        android:id="@+id/FragenkategorieButton"
        android:layout_width="149dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:text="@string/fragenkategorie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schwierigkeitslisteButton" />

    <Button
        android:id="@+id/spielStartenButton"
        android:layout_width="149dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="24dp"
        android:text="@string/spiel_starten"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="226dp"
        android:layout_height="154dp"
        android:layout_marginTop="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FragenkategorieButton"
        tools:srcCompat="@mipmap/ic_launcher_round" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zurueck"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />
</androidx.constraintlayout.widget.ConstraintLayout>

